--- a/css/estilostransforma.css
+++ b/css/estilostransforma.css
@@ -46,9 +46,20 @@ article p
 	-ms-transform: rotate(180deg);
 	-o-transform: rotate(180deg);
 	-webkit-transform: rotate(180deg);
-}
-*/
-article:hover
+}*/
+
+/*article:hover
+{
+	background: black;
+	color: greenyellow;
+	transform: scale(1.2);
+	-moz-transform:scale(1.2);
+	-ms-transform:scale(1.2);
+	-o-transform:scale(1.2);
+	-webkit-transform:scale(1.2);
+ }*/
+
+/*article:hover
 {
 	background: black;
 	color: greenyellow;
@@ -56,5 +67,15 @@ article:hover
 	-ms-transform: skew(10deg, 10deg);
 	-o-transform: skew(10deg, 10deg);
 	-webkit-transform: skew(10deg, 10deg);
-}
+}*/
+
+article:hover
+{
+	background: black;
+	color: greenyellow;
+	-moz-transform:translate(150px,150px) rotate(360deg) scale(1.15) skew(10deg,10deg);
+	-ms-transform:translate(150px,150px) rotate(360deg) scale(1.15) skew(10deg,10deg);
+	-o-transform:translate(150px,150px) rotate(360deg) scale(1.15) skew(10deg,10deg);
+	-webkit-transform:translate(150px,150px) rotate(360deg) scale(1.15) skew(10deg,10deg);
+  }
 
