--- a/practica01css/css/estilos.css
+++ b/practica01css/css/estilos.css
@@ -46,3 +46,60 @@ header nav ul li
 {
 	margin: -150px 0px 0px 0px;
 }
+
+#seccion01 article 
+{
+	text-align: center;
+}
+
+#seccion01 article img
+{
+	border: 5px solid rgba(150,150,150,0.3);
+	margin: 15px 0px 0px 0px;
+
+}
+
+#seccion02
+{
+	margin: 0 auto;
+}
+
+#seccion02 article
+{
+	display: inline-block;
+	vertical-align: top;
+	width: 32.8%;
+}
+
+.otraSeccion,.unaSeccion
+{
+	font-family: arial;
+	font-weight: bold;
+}
+.otraSeccion
+{
+	font-size: 2.5em;
+}
+
+.unaSeccion
+{
+	font-size: 4.5em;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
